--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
     <title>Pokemon App</title>
+    <script src="https://kit.fontawesome.com/6914ea1ba2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
